[project]
name = "synthetic-data-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Makarov",email = "mk.makarov96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openai (>=2.21.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
